--- a/src/imgModify.css
+++ b/src/imgModify.css
@@ -86,14 +86,14 @@
     border-radius: 2px;
     overflow: hidden;
 }
-.i-m-inner #content_layer .edit-container .cut-wrap .view {
+.i-m-inner #content_layer .edit-container .cut-wrap img.view {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
-    display: none;
+    display: block;
     cursor: move;
     transform: scale(1) rotate(0);
 }
